Religned Thingy because of scaling issue with foreignObject on iOS.

--- a/frontend/src/components/home-page/MagneticThingy.module.scss
+++ b/frontend/src/components/home-page/MagneticThingy.module.scss
@@ -2,4 +2,10 @@
   &:hover {
     z-index: 100;
   }
+
+  div {
+    position: absolute;
+    top: 0;
+    pointer-events: none;
+  }
 }
